#![allow(non_snake_case)]
[package]
name = "deckliste_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "unit_tests"
path = "src/tests.rs"
test = true

[dependencies]
clap = { version = "4.0.19" }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87"}

